--- a/index.html
+++ b/index.html
@@ -8,19 +8,17 @@
   <title>Projeto: Product preview card component</title>
 </head>
 <body>
-  <div class="card">
-    <div class="card__image"></div>
-    <div class="card__content">
-      <header>PERFUME</header>
-      <main>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-        <div class="card__content__values">
-          <p class="card__content__values__on-sale">$149.99</p>
-          <p class="card__content__values__normal">$169.99</p>
-        </div>
-        <a href="#"><img src="images/icon-cart.svg" alt=""> Add to Cart</a>
-      </main>
+  <div class="main">
+    <div class="image"></div>
+    <div class="content">
+      <header>PERFUME</header>      
+      <h1>Gabrielle Essence Eau De Parfum</h1>
+      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+      <div class="content__values">
+        <p class="content__values-onsale">$149.99</p>
+        <p class="content__values-normal">$169.99</p>
+      </div>
+      <a href="#"><img src="images/icon-cart.svg" alt=""> Add to Cart</a>      
     </div>
   </div> 
   <footer class="attribution">
